--- a/app/globals.css
+++ b/app/globals.css
@@ -66,43 +66,54 @@
   --shadow-opacity: var(--shadow-opacity);
   --color-shadow-color: var(--shadow-color);
   --color-destructive-foreground: var(--destructive-foreground);
+
+  --animate-spinner: spinner 800ms linear infinite;
+  @keyframes spinner {
+    0%,
+    100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+  }
 }
 
 :root {
   --radius: 0.5rem;
-  --background: oklch(1.00 0 0);
+  --background: oklch(1 0 0);
   --foreground: oklch(0.19 0.01 248.51);
-  --card: oklch(0.98 0.00 197.14);
+  --card: oklch(0.98 0 197.14);
   --card-foreground: oklch(0.19 0.01 248.51);
-  --popover: oklch(1.00 0 0);
+  --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.19 0.01 248.51);
-  --primary: oklch(0.67 0.16 245.00);
-  --primary-foreground: oklch(1.00 0 0);
+  --primary: oklch(0.67 0.16 245);
+  --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.19 0.01 248.51);
-  --secondary-foreground: oklch(1.00 0 0);
-  --muted: oklch(0.92 0.00 286.37);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.92 0 286.37);
   --muted-foreground: oklch(0.19 0.01 248.51);
   --accent: oklch(0.94 0.02 250.85);
-  --accent-foreground: oklch(0.67 0.16 245.00);
+  --accent-foreground: oklch(0.67 0.16 245);
   --destructive: oklch(0.62 0.24 25.77);
   --border: oklch(0.93 0.01 231.66);
-  --input: oklch(0.98 0.00 228.78);
+  --input: oklch(0.98 0 228.78);
   --ring: oklch(0.68 0.16 243.35);
-  --chart-1: oklch(0.67 0.16 245.00);
+  --chart-1: oklch(0.67 0.16 245);
   --chart-2: oklch(0.69 0.16 160.35);
   --chart-3: oklch(0.82 0.16 82.53);
   --chart-4: oklch(0.71 0.18 151.71);
   --chart-5: oklch(0.59 0.22 10.58);
-  --sidebar: oklch(0.98 0.00 197.14);
+  --sidebar: oklch(0.98 0 197.14);
   --sidebar-foreground: oklch(0.19 0.01 248.51);
-  --sidebar-primary: oklch(0.67 0.16 245.00);
-  --sidebar-primary-foreground: oklch(1.00 0 0);
+  --sidebar-primary: oklch(0.67 0.16 245);
+  --sidebar-primary-foreground: oklch(1 0 0);
   --sidebar-accent: oklch(0.94 0.02 250.85);
-  --sidebar-accent-foreground: oklch(0.67 0.16 245.00);
+  --sidebar-accent-foreground: oklch(0.67 0.16 245);
   --sidebar-border: oklch(0.93 0.01 238.52);
   --sidebar-ring: oklch(0.68 0.16 243.35);
-  --destructive-foreground: oklch(1.00 0 0);
-  --shadow-color: rgba(29,161,242,0.15);
+  --destructive-foreground: oklch(1 0 0);
+  --shadow-color: rgba(29, 161, 242, 0.15);
   --shadow-opacity: 0;
   --shadow-blur: 8px;
   --shadow-spread: 0px;
@@ -110,37 +121,42 @@
   --shadow-offset-y: 2px;
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --shadow-2xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-sm: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-md: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-lg: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-2xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
+  --shadow-2xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-sm: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-md: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-lg: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-2xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
   --tracking-normal: 0em;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --background: oklch(0 0 0);
-  --foreground: oklch(0.93 0.00 228.79);
+  --foreground: oklch(0.93 0 228.79);
   --card: oklch(0.21 0.01 274.53);
   --card-foreground: oklch(0.89 0 0);
   --popover: oklch(0 0 0);
-  --popover-foreground: oklch(0.93 0.00 228.79);
+  --popover-foreground: oklch(0.93 0 228.79);
   --primary: oklch(0.67 0.16 245.01);
-  --primary-foreground: oklch(1.00 0 0);
-  --secondary: oklch(0.96 0.00 219.53);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.96 0 219.53);
   --secondary-foreground: oklch(0.19 0.01 248.51);
   --muted: oklch(0.21 0 0);
   --muted-foreground: oklch(0.56 0.01 247.97);
   --accent: oklch(0.19 0.03 242.55);
   --accent-foreground: oklch(0.67 0.16 245.01);
   --destructive: oklch(0.62 0.24 25.77);
-  --border: oklch(0.27 0.00 248.00);
-  --input: oklch(0.30 0.03 244.82);
+  --border: oklch(0.27 0 248);
+  --input: oklch(0.3 0.03 244.82);
   --ring: oklch(0.68 0.16 243.35);
-  --chart-1: oklch(0.67 0.16 245.00);
+  --chart-1: oklch(0.67 0.16 245);
   --chart-2: oklch(0.69 0.16 160.35);
   --chart-3: oklch(0.82 0.16 82.53);
   --chart-4: oklch(0.71 0.18 151.71);
@@ -148,14 +164,14 @@
   --sidebar: oklch(0.21 0.01 274.53);
   --sidebar-foreground: oklch(0.89 0 0);
   --sidebar-primary: oklch(0.68 0.16 243.35);
-  --sidebar-primary-foreground: oklch(1.00 0 0);
+  --sidebar-primary-foreground: oklch(1 0 0);
   --sidebar-accent: oklch(0.19 0.03 242.55);
   --sidebar-accent-foreground: oklch(0.67 0.16 245.01);
   --sidebar-border: oklch(0.38 0.02 240.59);
   --sidebar-ring: oklch(0.68 0.16 243.35);
-  --destructive-foreground: oklch(1.00 0 0);
+  --destructive-foreground: oklch(1 0 0);
   --radius: 0.5rem;
-  --shadow-color: rgba(29,161,242,0.25);
+  --shadow-color: rgba(29, 161, 242, 0.25);
   --shadow-opacity: 0;
   --shadow-blur: 8px;
   --shadow-spread: 0px;
@@ -163,14 +179,19 @@
   --shadow-offset-y: 2px;
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --shadow-2xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-sm: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-md: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-lg: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00), 0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0.00);
-  --shadow-2xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0.00);
+  --shadow-2xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-xs: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-sm: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-md: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-lg: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0),
+    0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0);
+  --shadow-2xl: 0px 2px 8px 0px hsl(202.82 89.12% 53.14% / 0);
 }
 
 @layer base {
